[project]
name = "kuni-musubi-batch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "google-genai>=1.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=8.0.0",
    # DB モデルは backend/app/infrastructure/db/models.py を共用するため、
    # batch の親ディレクトリと backend root を PYTHONPATH に含めて実行する。
    # 例（batch/ ディレクトリから）: PYTHONPATH=..:../backend uv run python -m batch.main
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
# batch ディレクトリから実行する: PYTHONPATH=.. uv run pytest
# DB モデルが必要なテストは PYTHONPATH=..:../backend が必要
testpaths = ["tests"]
